--- a/index1.html
+++ b/index1.html
@@ -157,5 +157,7 @@ Artyom Kurbayeu
 <font color="blue" size="5" face="Arial">
     Wykonał Artsiom Kurbayeu<br>
 </font>
+                
+                <A HREF="tabela.html">TABELA</A>
 
 </html>
