--- a/index1.html
+++ b/index1.html
@@ -154,7 +154,7 @@ Artyom Kurbayeu
 <br>
 <br>
 
-                <A HREF="tabela.html">TABELA</A>
+                <A HREF="tabela.html">TABELA</A> <br> <br> <br>
 
 <font color="blue" size="5" face="Arial">
     Wykonał Artsiom Kurbayeu<br>
