--- a/index1.html
+++ b/index1.html
@@ -154,7 +154,7 @@ Artyom Kurbayeu
 <br>
 <br>
 
-                <A HREF="tabela.html">TABELA</A> <br> 
+                <A HREF="tabela.html"><font color="red"><b>TABELA</b></font></A> <br> 
                 <A HREF="formularz.html">FORMULARZ</A> <br> <br> <br>
                 
 
