--- a/index1.html
+++ b/index1.html
@@ -155,7 +155,7 @@ Artyom Kurbayeu
 <br>
 
                 <A HREF="tabela.html"><font color="red"><b>TABELA</b></font></A> <br> 
-                <A HREF="formularz.html">FORMULARZ</A> <br> <br> <br>
+                <A HREF="formularz.html"><font color="red"><b>FORMULARZ</b></font></A> <br> <br> <br>
                 
 
 <font color="blue" size="5" face="Arial">
